fixed spacing

--- a/startup-house/components/ImageStick/ImageStick.module.scss
+++ b/startup-house/components/ImageStick/ImageStick.module.scss
@@ -1,7 +1,7 @@
 .container {
     height: 400vh;
     position: relative;
-    margin-bottom: 100vh;
+    //margin-bottom: 10vh;
 
     .sticky {
         position: sticky;
